--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -30,4 +31,5 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
+          echo hahaah
           echo test, and deploy your project.
