--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+          
+      - name: prepare env
+        run: |
+          apt update
+          apt install devscripts gcc automake pkg-config
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
